--- a/style.css
+++ b/style.css
@@ -201,8 +201,8 @@
     border: 1px solid #d3d3d3;
 }
 
-/* Section_background */
-#background {
+/* Section_muscles */
+#muscles {
     position: relative;
     height: 500px;
     background-image: url('./images/bg02.jpg');
@@ -228,25 +228,69 @@
     margin-top: 50px;
 }
 
+.cardio_list li:nth-child(2) {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 .cardio_list li img {
+    max-width:100%;
+    height: 300px;
+    margin-bottom: 20px;
+    border: 1px solid rgb(53, 27, 27);
+    border-radius: 50%;
+}
+/* .cardio_list li img {
     width: 350px;
     height: 350px;
     margin-bottom: 20px;
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 50%;
+} */
+
+/* Section_backmuscles */
+#backmuscles {
+    position: relative;
+    height: 500px;
+    background-image: url('./images/bg03.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 100px;
 }
+
+.back_wrap .bg_title {
+    position: absolute;
+    color: #fff;
+    font-size: var(--font-large);
+    font-weight: var(--weight-bold);
+    right: 100px;
+}
+
+/* Section weight */
+.weight_list {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.weight_list li:nth-child(2) {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.weight_list li img {
+    max-width:100%;
+    height: 300px;
+    margin-bottom: 20px;
+    border: 1px solid rgb(53, 27, 27);
+}
+
+
 @media screen and (max-width: 1290px) {
     .equipment_list {
         display: block;
     }
 }
 
-@media screen and (max-width: 1024px) {
-    .cardio_list li img {
-        width: 250px;
-        height: 250px;
-    }
-}
 @media screen and (max-width: 768px) {
     :root {
         /* Font size */
@@ -255,6 +299,11 @@
         --font-regular: 16px;
         --font-small: 14px;
         --font-micro: 12px;
+    }
+
+    .section {
+        padding: 60px;
+        
     }
     #header {
         flex-direction: column;
@@ -298,8 +347,39 @@
 
     .cardio_list {
         flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .cardio_list li {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .cardio_list li:last-child {
+        margin-bottom: 0;
     }
     
+    .weight_list {
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .weight_list li {
+        margin-right: 0; 
+        margin-bottom: 10px;
+    }
+
+    .weight_list li:last-child {
+        margin-bottom: 0;
+    }
+
+    .weight_list li:nth-child(2),
+    .cardio_list li:nth-child(2) {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+   
     
 }
 
